--- a/CS Blogs/build.gradle
+++ b/CS Blogs/build.gradle
@@ -35,4 +35,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.google.dagger:dagger:2.0'
+    provided 'com.google.dagger:dagger-compiler:2.0'
+    provided 'javax.annotation:javax.annotation-api:1.2'
 }
