--- a/CS Blogs/build.gradle
+++ b/CS Blogs/build.gradle
@@ -38,4 +38,9 @@ dependencies {
     compile 'com.google.dagger:dagger:2.0'
     provided 'com.google.dagger:dagger-compiler:2.0'
     provided 'javax.annotation:javax.annotation-api:1.2'
+    compile 'com.android.support:cardview-v7:21.0.0'
+    compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'me.neavo:volley:2014.12.09'
+
 }
