--- a/CS Blogs/build.gradle
+++ b/CS Blogs/build.gradle
@@ -42,5 +42,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'me.neavo:volley:2014.12.09'
-
+    compile 'uk.co.alexpringle:crate:1.0-SNAPSHOT'
 }
